--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ header-img: "img/about-bg.jpg"
 
     <p>爱好玩游戏、看电影、看书；<a href="https://steamcommunity.com/id/271093251/" target="_blank">Steam</a>上玩了一部分的游戏。</p>
 
-    <p>联系方式：a271093251@live.com</p>
+    <p>联系方式：<a>jujie97@outlook.com</a></p>
 </div>
 
 <!-- English Version -->
