--- a/about.html
+++ b/about.html
@@ -14,11 +14,11 @@ header-img: "img/about-bg.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
     <blockquote>
-        玩游戏，做设计，写代码，看世界，想YouYou。
+        游戏，设计，YouYou
     </blockquote>
-    <p>你好，我叫<strong>鞠杰</strong>，就读于重庆第二师范学院本科，物联网工程专业。热爱玩游戏和做设计，想投身游戏行业。</p>
+    <p>你好，我叫<strong>鞠杰</strong>，一位游戏关卡策划，热衷于情绪设计。</p>
 
-    <p>爱好玩游戏、看电影、看书；<a href="https://steamcommunity.com/id/271093251/" target="_blank">Steam</a>上玩了一部分的游戏。</p>
+    <p>这是我的<a href="https://steamcommunity.com/id/271093251/" target="_blank">Steam</a>。</p>
 
     <p>联系方式：<a href="mailto:jujie97@outlook.com">jujie97@outlook.com</a></p>
 </div>
@@ -26,15 +26,15 @@ header-img: "img/about-bg.jpg"
 <!-- English Version -->
 <div class="en post-container">
     <blockquote>
-        Play games, do design, write code, see the world,  Youyou.
+        Games, Design, YouYou.
     </blockquote>
 
-    <p>Hi, my name is <strong>Jie Ju</strong>. Graduated from Chongqing Second Normal University, majoring in Internet of Things engineering. Love to play games and design, want to join the game industry.</p>
+    <p>Hi, my name is <strong>Ju Jie</strong>. A game level designer, passionate about emotional design.</p>
 
-    <p>Love to play games, watch movies, read books; Some of the games are played on <a href="https://steamcommunity.com/id/271093251/" target="_blank">Steam</a>.</p>
+    <p>This is my<a href="https://steamcommunity.com/id/271093251/" target="_blank">Steam</a>.</p>
 
 
-    <p>Contact me:a271093251@live.com</p>    
+    <p>Contact me:<a href="mailto:jujie97@outlook.com">jujie97@outlook.com</a></p>    
 </div>
 
 <!-- Handle Language Change -->
