--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@ header-img: "img/about-bg.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
     <blockquote>
-        游戏，设计，YouYou
+        爱生活，爱游戏，爱设计。
     </blockquote>
-    <p>你好，我叫<strong>鞠杰</strong>，一位游戏关卡策划，热衷于情绪设计。</p>
+    <p>你好，我叫<strong>鞠杰</strong>，一位游戏开发者。</p>
 
     <p>这是我的<a href="https://steamcommunity.com/id/271093251/" target="_blank">Steam</a>。</p>
 
@@ -26,10 +26,10 @@ header-img: "img/about-bg.jpg"
 <!-- English Version -->
 <div class="en post-container">
     <blockquote>
-        Games, Design, YouYou.
+        Love Life, Love Game, Love Design.
     </blockquote>
 
-    <p>Hi, my name is <strong>Ju Jie</strong>. A game level designer, passionate about emotional design.</p>
+    <p>Hi, my name is <strong>Ju Jie</strong>. A game developer.</p>
 
     <p>This is my <a href="https://steamcommunity.com/id/271093251/" target="_blank">Steam</a>.</p>
 
