--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "你快走吧，这里没东西了 —_—"
+description: "这里没东西了 —_—"
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
