更新作品集

--- a/about.html
+++ b/about.html
@@ -20,6 +20,10 @@ header-img: "img/about-bg.jpg"
 
     <p>这是我的<a href="https://steamcommunity.com/id/271093251/" target="_blank">Steam</a>。</p>
 
+    <p>平时做的小玩意儿<a href="https://www.bilibili.com/list/6295652?sid=3583999&desc=1&oid=469485263&bvid=BV1A5411973C" target="_blank">B站视频集</a>。</p>、
+
+    <p>平时的笔记<a href="https://1drv.ms/o/s!BCVanskUc0xBqpoL5mw5xeIciwVzAA?e=VdgiLhg390WJgw6nZT-Hng&at=9" target="_blank">通关秘籍</a>，需要科学上网。</p>
+
     <p>联系方式：<a href="mailto:jujie97@outlook.com">jujie97@outlook.com</a></p>
 </div>
 
@@ -33,6 +37,9 @@ header-img: "img/about-bg.jpg"
 
     <p>This is my <a href="https://steamcommunity.com/id/271093251/" target="_blank">Steam</a>.</p>
 
+    <p>一些平时做的小玩意儿<a href="https://www.bilibili.com/list/6295652?sid=3583999&desc=1&oid=469485263&bvid=BV1A5411973C" target="_blank">B站视频集</a>。</p>
+
+    <p>平时的笔记<a href="https://1drv.ms/o/s!BCVanskUc0xBqpoL5mw5xeIciwVzAA?e=VdgiLhg390WJgw6nZT-Hng&at=9" target="_blank">通关秘籍</a>，需要科学上网。</p>
 
     <p>Contact me:<a href="mailto:jujie97@outlook.com">jujie97@outlook.com</a></p>    
 </div>
