更新b站视频

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ header-img: "img/about-bg.jpg"
 
     <p>这是我的<a href="https://steamcommunity.com/id/271093251/" target="_blank">Steam</a>。</p>
 
-    <p>平时做的小玩意儿<a href="https://www.bilibili.com/list/6295652?sid=3583999" target="_blank">B站视频集</a>。</p>
+    <p>平时做的小玩意儿<a href="https://space.bilibili.com/6295652/channel/series" target="_blank">B站视频</a>。</p>
 
     <p>平时的笔记<a href="https://1drv.ms/o/s!BCVanskUc0xBqpoL5mw5xeIciwVzAA?e=VdgiLhg390WJgw6nZT-Hng&at=9" target="_blank">通关秘籍</a>，需要科学上网。</p>
 
@@ -37,7 +37,7 @@ header-img: "img/about-bg.jpg"
 
     <p>This is my <a href="https://steamcommunity.com/id/271093251/" target="_blank">Steam</a>.</p>
 
-    <p>一些平时做的小玩意儿<a href="https://www.bilibili.com/list/6295652" target="_blank">B站视频集</a>。</p>
+    <p>一些平时做的小玩意儿<a href="https://space.bilibili.com/6295652/channel/series" target="_blank">B站视频</a>。</p>
 
     <p>平时的笔记<a href="https://1drv.ms/o/s!BCVanskUc0xBqpoL5mw5xeIciwVzAA?e=VdgiLhg390WJgw6nZT-Hng&at=9" target="_blank">通关秘籍</a>，需要科学上网。</p>
 
