取消作品集

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -48,7 +48,7 @@ header-img: "img/portfolio-bg.jpg"
         <div class="row">
             <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
 
-                <div class="panel panel-default">
+                <!-- <div class="panel panel-default">
                     <div class="panel-heading">
                         <div class="panel-title">
                             <div class="row">
@@ -68,12 +68,12 @@ header-img: "img/portfolio-bg.jpg"
                                         <div class="col-md-8 col-xs-12 post-container">
                                             <p><b>杂七杂八</b></p>
                                             <p><i>B站</i></p>
-                                            <p>https://www.bilibili.com/list/6295652?sid=3583999&desc=1&oid=469485263&bvid=BV1A5411973C</p> 
+                                            <p>https://space.bilibili.com/6295652/channel/series</p> 
                                         </div>
                                     </div>
                                 </li>
                             </ul>
-                </div>
+                </div> -->
 
 
                 <!-- <div class="panel panel-default">
